--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,8 +7,8 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(-45deg, #f0f4f8, #e3f2fd, #e8f5e9, #f3e5f5);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(-45deg, #dbeafe, #e0f2fe, #fce7f3, #ede9fe);
       background-size: 400% 400%;
       animation: gradientBG 20s ease infinite;
       color: #111827;
@@ -21,12 +21,17 @@
     .container {
       display: flex;
       flex-wrap: wrap;
-      padding: 40px;
+      padding: 20px;
     }
     .left, .right {
       flex: 1;
       min-width: 300px;
       padding: 20px;
+    }
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+      }
     }
     h1 {
       font-size: 36px;
@@ -80,7 +85,7 @@
       <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ruchitha-r-423409274/" target="_blank">Ruchitha Profile</a></p>
 
       <h2>Career Objective</h2>
-      <p>Detail-oriented and proactive DevOps/SRE enthusiast skilled in AWS, Linux, CI/CD, scripting, and cloud infrastructure. Passionate about automating workflows, optimizing system reliability, and delivering scalable deployments.</p>
+      <p>DevOps and SRE enthusiast with expertise in AWS, Linux, CI/CD, and scripting. Passionate about building scalable infrastructure, enhancing system reliability, and automating manual processes to boost operational efficiency.</p>
 
       <h2>Skills</h2>
       <div class="skills-bar"><span style="width: 90%">Linux</span></div>
@@ -89,55 +94,72 @@
       <div class="skills-bar"><span style="width: 75%">Python</span></div>
       <div class="skills-bar"><span style="width: 85%">CI/CD</span></div>
       <div class="skills-bar"><span style="width: 70%">Terraform</span></div>
+
+      <h2>Certifications</h2>
+      <ul>
+        <li>AWS Certified Solutions Architect – Associate</li>
+        <li>Linux Foundation Certified System Administrator (LFCS)</li>
+        <li>Docker Certified Associate (DCA)</li>
+        <li>Python for Everybody – University of Michigan (Coursera)</li>
+        <li>Introduction to DevOps – Linux Foundation (edX)</li>
+      </ul>
+
+      <h2>Interests</h2>
+      <ul>
+        <li>Linux System Administration</li>
+        <li>DevOps & SRE Practices</li>
+        <li>Cloud Automation & Infrastructure as Code</li>
+        <li>Containerization with Docker & Kubernetes</li>
+      </ul>
     </div>
 
     <div class="right">
       <h2>Experience</h2>
       <p><strong>OnPassive Private Limited</strong> – Associate Cloud Engineer<br><em>July 2023 – March 2025</em></p>
       <ul>
-        <li>Developed and maintained CI/CD pipelines with GitHub Actions and Jenkins.</li>
-        <li>Monitored infrastructure using CloudWatch, Prometheus, and custom scripts.</li>
-        <li>Configured and maintained AWS resources including EC2, IAM, S3, VPCs.</li>
-        <li>Automated deployment using Ansible, Terraform, and Bash.</li>
-        <li>Handled system performance tuning and automated backup strategies.</li>
-        <li>Participated in incident management and root cause analysis.</li>
+        <li>Created and managed scalable CI/CD pipelines using GitHub Actions and Jenkins.</li>
+        <li>Developed Infrastructure as Code using Terraform and automated provisioning with Ansible.</li>
+        <li>Configured monitoring solutions including CloudWatch, Prometheus, and Slack notifications.</li>
+        <li>Provisioned and maintained EC2, IAM roles, VPCs, Route53, and S3 resources on AWS.</li>
+        <li>Performed system health checks and implemented automated backup strategies.</li>
+        <li>Collaborated in incident response, RCA, and service restoration under pressure.</li>
       </ul>
 
       <h2>Projects</h2>
       <p><strong>User Process Tracker</strong> – Linux user monitoring tool<br><em>Technologies: Bash, Linux</em></p>
       <ul>
-        <li>Tracked logged-in users and their background processes.</li>
-        <li>Generated secure logs for audit compliance.</li>
-        <li>Improved visibility into user activity for security teams.</li>
+        <li>Monitors user login activities and background processes in real-time.</li>
+        <li>Generates audit-compliant secure logs for tracking system usage.</li>
+        <li>Enhances system security visibility and accountability.</li>
       </ul>
 
       <p><strong>System Resource Monitor</strong> – Shell-based system metrics monitor<br><em>Technologies: Bash, cron, Slack API</em></p>
       <ul>
-        <li>Monitored CPU, memory, disk usage with alerts.</li>
-        <li>Daily report generation using cron jobs.</li>
-        <li>Integrated Slack alerts for system health notifications.</li>
+        <li>Real-time CPU, memory, and disk utilization monitoring via shell scripts.</li>
+        <li>Automated daily system health reports using cron jobs.</li>
+        <li>Slack alert integration for immediate issue detection and response.</li>
       </ul>
 
       <p><strong>LAMP Auto Deploy with AWS</strong> – Automated stack provisioning<br><em>Technologies: AWS EC2, Apache, MySQL, PHP, Ansible</em></p>
       <ul>
-        <li>Provisioned LAMP stack on AWS using shell and Ansible.</li>
-        <li>Integrated SSL, Route53, and GitHub CI/CD.</li>
-        <li>Containerized application for easy deployment.</li>
+        <li>Provisioned LAMP stack using Ansible and shell scripts on AWS EC2.</li>
+        <li>Configured SSL using Certbot and DNS routing via Route53.</li>
+        <li>Set up GitHub CI/CD for seamless code integration and deployment.</li>
+        <li>Monitored deployments using Prometheus with Grafana dashboards.</li>
       </ul>
 
       <p><strong>AWS DevOps Infrastructure</strong> – Scalable infra project<br><em>Technologies: AWS, Terraform, GitHub Actions, Docker</em></p>
       <ul>
-        <li>Deployed scalable infra using Terraform and EC2 autoscaling.</li>
-        <li>Implemented CI/CD with GitHub Actions and Docker containers.</li>
-        <li>Followed best practices for secure IAM and networking.</li>
+        <li>Provisioned highly available infrastructure using Terraform and autoscaling EC2 instances.</li>
+        <li>Used Docker for containerizing services and GitHub Actions for CI/CD workflows.</li>
+        <li>Ensured IAM best practices and VPC security compliance.</li>
       </ul>
 
-      <p><strong>WordPress on LAMP with CI/CD</strong> – Scalable, automated blogging site<br><em>Technologies: WordPress, Apache, MySQL, PHP, AWS EC2, Ansible, GitHub Actions</em></p>
+      <p><strong>WordPress on LAMP with CI/CD</strong> – Blogging site deployment<br><em>Technologies: WordPress, Apache, MySQL, PHP, AWS EC2, Ansible</em></p>
       <ul>
-        <li>Automated deployment of a WordPress blog using Ansible on EC2 Linux instances.</li>
-        <li>Configured Apache VirtualHost for custom domain with HTTPS using Certbot.</li>
-        <li>Integrated GitHub CI/CD pipeline for automatic updates on theme and plugin changes.</li>
-        <li>Enabled persistent storage, firewall rules, and backup strategy.</li>
+        <li>Deployed WordPress on LAMP stack via automated Ansible scripts.</li>
+        <li>Secured traffic with HTTPS and custom domain configuration.</li>
+        <li>Implemented continuous delivery pipeline using GitHub Actions.</li>
       </ul>
 
       <h2>Education</h2>
@@ -147,24 +169,9 @@
         <li><strong>SSC</strong> – Krishnaveni Talent School, 9.8 CGPA</li>
       </ul>
 
-      <h2>Certifications</h2>
-      <ul>
-        <li>AWS Certified Solutions Architect – Associate</li>
-        <li>Linux Foundation Certified System Administrator (LFCS)</li>
-        <li>Docker Certified Associate (DCA)</li>
-      </ul>
-
-      <h2>Interests</h2>
-      <ul>
-        <li>Linux System Administration</li>
-        <li>DevOps & SRE Practices</li>
-        <li>Cloud Automation & IaC</li>
-        <li>Containerization with Docker/Kubernetes</li>
-      </ul>
-
       <h2>Declaration</h2>
       <p>I hereby declare that the information provided above is true to the best of my knowledge.</p>
     </div>
-     </div>
+  </div>
 </body>
 </html>
