--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -94,14 +94,24 @@
       <div class="skills-bar"><span style="width: 75%">Python</span></div>
       <div class="skills-bar"><span style="width: 85%">CI/CD</span></div>
       <div class="skills-bar"><span style="width: 70%">Terraform</span></div>
+      <div class="skills-bar"><span style="width: 75%">DevOps</span></div>
+      <div class="skills-bar"><span style="width: 70%">SQL</span></div>
+      <div class="skills-bar"><span style="width: 65%">HTML</span></div>
+      <div class="skills-bar"><span style="width: 60%">C Language</span></div>
+      <div class="skills-bar"><span style="width: 65%">CSS</span></div>
+      <div class="skills-bar"><span style="width: 60%">Kubernetes</span></div>
+
+      <h2>Education</h2>
+      <ul>
+        <li><strong>B.Tech (EEE)</strong> – SRTIST, 8.4 CGPA (2021)</li>
+        <li><strong>Intermediate</strong> – Gowthami Jr. College, 97.2%</li>
+        <li><strong>SSC</strong> – Krishnaveni Talent School, 9.8 CGPA</li>
+      </ul>
 
       <h2>Certifications</h2>
       <ul>
-        <li>AWS Certified Solutions Architect – Associate</li>
-        <li>Linux Foundation Certified System Administrator (LFCS)</li>
-        <li>Docker Certified Associate (DCA)</li>
-        <li>Python for Everybody – University of Michigan (Coursera)</li>
-        <li>Introduction to DevOps – Linux Foundation (edX)</li>
+        <li>AWS Certified Solutions Architect – Associate (Naresh IT Institute)</li>
+        <li>Linux Administration Full Course – Udemy</li>
       </ul>
 
       <h2>Interests</h2>
@@ -161,16 +171,6 @@
         <li>Secured traffic with HTTPS and custom domain configuration.</li>
         <li>Implemented continuous delivery pipeline using GitHub Actions.</li>
       </ul>
-
-      <h2>Education</h2>
-      <ul>
-        <li><strong>B.Tech (EEE)</strong> – SRTIST, 8.4 CGPA (2021)</li>
-        <li><strong>Intermediate</strong> – Gowthami Jr. College, 97.2%</li>
-        <li><strong>SSC</strong> – Krishnaveni Talent School, 9.8 CGPA</li>
-      </ul>
-
-      <h2>Declaration</h2>
-      <p>I hereby declare that the information provided above is true to the best of my knowledge.</p>
     </div>
   </div>
 </body>
